# myapp202206_api

./: .gitignore  Dockerfile  heroku.yml  pyproject.toml
.github/workflows/: ci-workflow.yml
app/: db.py  main.py  migrate_db.py
app/cruds/: done.py  task.py
app/models/: task.py
app/routers/: done.py  task.py
app/schemas/: task.py
tests/: test_main.py
